--- a/translations/kangyur/translations/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
+++ b/translations/kangyur/translations/103-004_toh4568-3-chapter_3_publication_history_of_the_conquerors_extant_scriptures.xml
@@ -32,7 +32,7 @@
           Jun.</sponsor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -184,6 +184,9 @@
                 </change>
                 <change who="#konchog" when="2024-02-14T18:50:33.216Z" type="text-version" status="1.0.5" xml:id="UT22084-103-004-752">
                     <desc>Cleaning up the bibliography, a few fixes elsewhere.</desc>
+                </change>
+                <change who="#sameer" when="2024-02-15T07:43:45.8Z" type="text-version" status="1.0.6" xml:id="UT22084-103-004-755">
+                    <desc>Applied few fixes sent by Konchog</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -836,7 +839,7 @@
             <p tid="72">The last of these, it is said, consisted of the eighteen tribes of Nguchen
               Gyalmo. These are, namely, the Gar, Ké, and Göl; the Sung, Ser, and Drom; the Chi,
               <term ref="UT22084-103-004-385">Bu</term>, and Shak; the Shöl, <term ref="UT22084-103-004-388">Tak</term>, and Chang; the
-              Jé, <term ref="UT22084-103-004-391">Sing</term>, and Ram; and the Chuk, <term ref="UT22084-103-004-394">Po</term>, and <term ref="UT22084-103-004-395">Bu</term>.</p>
+              Jé, <term ref="UT22084-103-004-391">Sing</term>, and Ram; and the Chuk, <term ref="UT22084-103-004-394">Po</term>, and <term ref="UT22084-103-004-753">Bu</term>.</p>
             <milestone unit="chunk" xml:id="UT22084-103-004-143"/>
             <p tid="73">Among those, in the Gar lineage, there were two brothers by the names of
               Garchen Yeshé Sangpo and Gar Dampa. According to the secretary’s writings, the latter
@@ -2939,14 +2942,24 @@
               <term type="translationMain">Bu</term>
               <term status="verified" xml:lang="Bo-Ltn" n="1">’bu</term>
                             <term xml:lang="bo" n="1" status="verified">འབུ།</term>
-            <term status="verified" xml:lang="Bo-Ltn" n="2">bu</term>
-                            <term xml:lang="bo" n="2" status="verified">བུ།</term>  
             <term status="verified" xml:lang="Sa-Ltn"/>
               <note type="definition">
                                 <p>A clan or tribe in Tibet. According to the <title xml:lang="en">Catalog</title>, one of the eighteen tribes of Nguchen Gyalmo,
                   belonging to the divine lineage of Go.</p>
                             </note>
             </gloss>
+                    </item>
+          <item>
+                        <gloss mode="marked" type="term" xml:id="UT22084-103-004-753">
+            <term type="translationMain">Bu</term>
+            <term status="verified" xml:lang="Bo-Ltn" n="1">bu</term>
+            <term xml:lang="bo" n="1" status="verified">བུ།</term>  
+            <term status="verified" xml:lang="Sa-Ltn"/>
+            <note type="definition">
+                                <p>A clan or tribe in Tibet. According to the <title xml:lang="en">Catalog</title>, one of the eighteen tribes of Nguchen Gyalmo,
+              belonging to the divine lineage of Go.</p>
+                            </note>
+          </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-103-004-386">
@@ -3323,18 +3336,14 @@
                             </note>
             </gloss>
                     </item>
-          <item>
-                        <gloss type="person" xml:id="UT22084-103-004-421">
+          <!--<item><gloss type="person" xml:id="UT22084-103-004-421">
               <term type="translationMain">Noble Great Compassionate One</term>
               <term status="verified" xml:lang="Bo-Ltn" n="1">’phags pa thugs rje chen po </term>
               <term xml:lang="bo" n="1">འཕགས་པ་ཐུགས་རྗེ་ཆེན་པོ།</term>
               <term status="verified" xml:lang="Sa-Ltn"/>
-              <note type="definition">
-                                <p>Ārya Mahākāruṇika, or the Noble Great Compassionate One, is
-                  an epithet of Avalokiteśvara, the bodhisattva of compassion.</p>
-                            </note>
-            </gloss>
-                    </item>
+              <note type="definition"><p>Ārya Mahākāruṇika, or the Noble Great Compassionate One, is
+                  an epithet of Avalokiteśvara, the bodhisattva of compassion.</p></note>
+            </gloss></item>-->
           <item>
                         <gloss type="person" xml:id="UT22084-103-004-422">
               <term type="translationMain">Songtsen Gampo</term>
@@ -4431,6 +4440,7 @@
               <term status="verified" xml:lang="Bo-Ltn" n="1">bde chen bsod nams bzang po </term>
               <term xml:lang="bo" n="1">བདེ་ཆེན་བསོད་ནམས་བཟང་པོ།</term>
               <term status="verified" xml:lang="Sa-Ltn"/>
+            <term type="translationAlternative">Sönam Sangpo</term>
               <note type="definition">
                                 <p>A son of Karchen Jangchup Bum.</p>
                             </note>
@@ -5221,6 +5231,7 @@
                                 <p>One of Tibet’s three famous mountains. Located in
                   present-day Lhokha prefecture.</p>
                             </note>
+            <term type="translationAlternative">Tsari</term>
             </gloss>
                     </item>
           <item>
@@ -6110,6 +6121,7 @@
               <term status="verified" xml:lang="Sa-Ltn"/>
               <term type="translationAlternative">The Thirty Verses</term>
               <term type="translationAlternative">The Application of Gender Signs</term>
+            <term type="translationAlternative">Thirty Verses</term>
               <note type="definition">
                                 <p>Two foundational texts of Tibetan grammar, which are the
                   only two remaining of Thönmi Sambhota’s original eight. <title xml:lang="en">The
@@ -6543,6 +6555,16 @@
                   6, and 7a.</p>
                             </note>
             </gloss>
+                    </item>
+          <item>
+                        <gloss type="person" xml:id="UT22084-103-004-754">
+            <term type="translationMain">Lama Tashi Gyatso</term>
+            <term xml:lang="Bo-Ltn" status="verified" n="1">bla ma bkra shis rgya mtsho</term>
+                            <term xml:lang="bo" n="1" status="verified">བླ་མ་བཀྲ་ཤིས་རྒྱ་མཚོ།</term>
+            <note type="definition">
+              <p>A descendent of Dorjé Lhundrup.</p>
+            </note>
+          </gloss>
                     </item>
         </list>
       </div>
