--- a/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
+++ b/translations/kangyur/placeholders/088-003_toh509,920-incantation_of_the_hundred_thousand_ornaments_of_the_essence_of_awakening.xml
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-088-003-22">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-088-003"/>
                 <date/>
             </publicationStmt>
@@ -91,6 +91,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-13T15:14:44.26Z" type="text-version" status="0.0.10" xml:id="UT22084-088-003-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-15T09:39:02.353Z" type="translation-status" status="2.c" xml:id="UT22084-088-003-26">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-15T09:39:02.353Z" type="text-version" status="0.0.11" xml:id="UT22084-088-003-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
