--- a/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
@@ -16,11 +16,11 @@
                 <editor role="copyEditor" xml:id="UT22084-088-015-22">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-088-015"/>
                 <date/>
             </publicationStmt>
@@ -92,6 +92,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-13T15:16:54.78Z" type="text-version" status="0.0.10" xml:id="UT22084-088-015-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-15T09:44:28.245Z" type="translation-status" status="2.c" xml:id="UT22084-088-015-26">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-15T09:44:28.245Z" type="text-version" status="0.0.11" xml:id="UT22084-088-015-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
