--- a/translations/kangyur/placeholders/044-012_toh91-the_sutra_of_ratnacudas_questions.xml
+++ b/translations/kangyur/placeholders/044-012_toh91-the_sutra_of_ratnacudas_questions.xml
@@ -5,27 +5,28 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Ratnacūḍa's Questions</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">ratnacūḍaparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Ratnacūḍaparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gtsug na rin po ches zhus pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryaratnacūḍa­paripṛcchā­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryaratnacūḍa­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gtsug na rin po ches zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《寶髻所問經》(大正藏：大寶積經寶髻菩薩會)</title>
-                <author role="translatorMain" ref="contributors.xml#team-57"/>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-352">Ringu Tulku Rinpoche</consultant>
-                <consultant role="projectManager" ref="contributors.xml#person-351">Lama Karma Wangmo</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-352">Ringu Tulku Rinpoche</author>
-                <author role="translatorEng" ref="contributors.xml#person-353">Holly Gayley</author>
-                <author role="translatorEng" ref="contributors.xml#person-351">Lama Karma Wangmo</author>
-                <consultant role="advisor" ref="contributors.xml#person-96">L.S. Summer</consultant>
-                <consultant role="advisor" ref="contributors.xml#person-354">Zhujun Ma</consultant>
-                <editor role="reviser" ref="contributors.xml#person-355">Joshua Shelton</editor>
-                <sponsor ref="sponsors.xml#sponsor-199">Dakki</sponsor>
+                <author role="translatorMain" xml:id="UT22084-044-012-1"/>
+                <consultant role="dharmaMaster" xml:id="UT22084-044-012-2">Ringu Tulku Rinpoche</consultant>
+                <consultant role="projectManager" xml:id="UT22084-044-012-3">Lama Karma Wangmo</consultant>
+                <author role="translatorEng" xml:id="UT22084-044-012-4">Ringu Tulku Rinpoche</author>
+                <author role="translatorEng" xml:id="UT22084-044-012-5">Holly Gayley</author>
+                <author role="translatorEng" xml:id="UT22084-044-012-6">Lama Karma Wangmo</author>
+                <consultant role="advisor" xml:id="UT22084-044-012-7">L.S. Summer</consultant>
+                <consultant role="advisor" xml:id="UT22084-044-012-8">Zhujun Ma</consultant>
+                <editor role="reviser" xml:id="UT22084-044-012-9">Joshua Shelton</editor>
+                <sponsor xml:id="UT22084-044-012-10">Dakki</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-044-012"/>
                 <date/>
             </publicationStmt>
@@ -40,18 +41,45 @@
                     <idno source-id="O1JC114941JC11638" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T08:54:23.663Z" user="admin">30/06/2022 08:54:23</note>
-                <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:36:51.366Z" user="line-tofte">4</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:36:51.366Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="3" date-time="2020-11-30T10:06:24.871Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T10:06:24.871Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T11:57:07.236Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T11:58:43.668Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2021-02-07T15:55:07.189Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2021-03-17T02:22:20.7Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2022-06-30T08:54:15.796Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-10-02T13:36:51.366Z" type="translation-status" status="4" xml:id="UT22084-044-012-11">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-02T13:36:51.366Z" type="text-version" status="0.0.1" xml:id="UT22084-044-012-12">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T10:06:24.871Z" type="translation-status" status="3" xml:id="UT22084-044-012-13">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T10:06:24.871Z" type="text-version" status="0.0.2" xml:id="UT22084-044-012-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-11T11:57:07.236Z" type="text-version" status="0.0.3" xml:id="UT22084-044-012-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-11T11:58:43.668Z" type="text-version" status="0.0.4" xml:id="UT22084-044-012-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#amy" when="2021-02-07T15:55:07.189Z" type="text-version" status="0.0.5" xml:id="UT22084-044-012-17">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#amy" when="2021-03-17T02:22:20.7Z" type="text-version" status="0.0.6" xml:id="UT22084-044-012-18">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-06-30T08:54:15.796Z" type="text-version" status="0.0.7" xml:id="UT22084-044-012-19">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-044-012-20">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-19T15:58:25.63Z" type="translation-status" status="2.h" xml:id="UT22084-044-012-21">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-19T15:58:25.63Z" type="text-version" status="0.0.9" xml:id="UT22084-044-012-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
