--- a/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-101-146-286">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.12 <date>2023</date>
+                <edition>v 1.1.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -62,13 +62,15 @@
                 <bibl key="toh1777" type="text">
                     <ref>Toh 1777</ref>
                     <biblScope>Degé Tengyur, Vol. 28 (rgyud ’bum, sha), folios 271.b–272.a.</biblScope>
-                    <author role="translatorTib" xml:id="UT22084-101-146-332">Brahmin Vararuci</author>
+                    <author xml:id="UT22084-101-146-332" xml:lang="en">Brahmin Vararuci</author>
                     <location work="UT23703" count-pages="2">
-                        <volume number="28" start-page="544" end-page="545"/>
+                        <volume number="28" start-page="542" end-page="543"/>
                     </location>
                     <idno parent-id="O1JC76301JC21620" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC76301JC8330" work="W23703"/>
                 </bibl>
+                
+                
             </sourceDesc>
             <notesStmt/>
             <revisionDesc>
@@ -221,6 +223,15 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-27T18:34:55.623Z" type="text-version" status="1.1.12" xml:id="UT22084-101-146-339">
                     <desc>Added pending links.</desc>
+                </change>
+                <change who="#john" when="2024-01-19T08:55:29.492Z" type="text-version" status="1.1.13" xml:id="UT22084-101-146-340">
+                    <desc>Auto (update-locations)</desc>
+                </change>
+                <change who="#john" when="2024-01-19T08:56:48.149Z" type="text-version" status="1.1.14" xml:id="UT22084-101-146-341">
+                    <desc>Auto (update-locations)</desc>
+                </change>
+                <change who="#celso" when="2024-02-19T20:38:51.083Z" type="text-version" status="1.1.15" xml:id="UT22084-101-146-342">
+                    <desc>Adjusted source pagination</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -998,7 +1009,7 @@
                             Demon</term>
                         <term xml:lang="Bo-Ltn" status="verified" n="1">bdud kyi yum </term>
                         <term xml:lang="bo" n="1">བདུད་ཀྱི་ཡུམ།</term>
-                        <term xml:lang="Sa-Ltn" status="verified"/>
+                        
                         <note type="definition">
                                 <p>An epithet for Śrīdevī Mahākālī. According
                             to <title xml:lang="en">The Tantra of the Flaming Ḍākinī</title> (<ref rend="pending" target="http://read.84000.co/translation/toh842.html"/>Toh 842),
@@ -1013,7 +1024,7 @@
                         <term type="translationMain">Yama’s Sister</term>
                         <term xml:lang="Bo-Ltn" status="verified" n="1">gshin rje’i lcam mo </term>
                         <term xml:lang="bo" n="1">གཤིན་རྗེའི་ལྕམ་མོ།</term>
-                        <term xml:lang="Sa-Ltn" status="verified"/>
+                        
                         <note type="definition">
                                 <p>An epithet for Śrīdevī Mahākālī. According to <title xml:lang="en">The Tantra of the Flaming
                                 Ḍākinī</title> (<ref rend="pending" target="http://read.84000.co/translation/toh842.html"/>Toh 842), Śrīdevī Mahākālī was originally
