--- a/translations/kangyur/placeholders/039-004_toh48-the_discourse_on_dreams.xml
+++ b/translations/kangyur/placeholders/039-004_toh48-the_discourse_on_dreams.xml
@@ -5,27 +5,29 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Discourse on Dreams</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">svapnanirdeśasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Svapnanirdeśasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rmi lam bstan pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasvapnanirdeśa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasvapnanirdeśa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="zh">《說夢經》（大正藏：《大寶積經淨居天子會第四》）</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rmi lam bstan pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-36"/>
-                <editor role="externalReviewer" ref="eft:person-51">James Duncan Gentry</editor>
-                <editor role="projectEditor" ref="eft:person-230">Tom Tillemans</editor>
-                <consultant role="projectManager" ref="eft:person-209">Frances Garrett</consultant>
-                <consultant role="dharmaMaster" ref="eft:person-210">Khenpo Kunga Sherab</consultant>
-                <consultant role="advisor" ref="eft:person-211">Gareth Sparham</consultant>
-                <author role="translatorEng" ref="eft:person-212">Ben Wood</author>
-                <author role="translatorEng" ref="eft:person-210">Khenpo Kunga Sherab</author>
-                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
-                <sponsor ref="eft:sponsor-221">Cosmo Namkha Namgyal Sucharitakul with Kuhn Sucharitakul and Pema Choeden Namgyal Abrahams</sponsor>
+                <author role="translatorMain" xml:id="UT22084-039-004-1"/>
+                <editor role="externalReviewer" xml:id="UT22084-039-004-2">James Duncan Gentry</editor>
+                <editor role="projectEditor" xml:id="UT22084-039-004-3">Tom Tillemans</editor>
+                <consultant role="projectManager" xml:id="UT22084-039-004-4">Frances Garrett</consultant>
+                <consultant role="dharmaMaster" xml:id="UT22084-039-004-5">Khenpo Kunga Sherab</consultant>
+                <consultant role="advisor" xml:id="UT22084-039-004-6">Gareth Sparham</consultant>
+                <author role="translatorEng" xml:id="UT22084-039-004-7">Ben Wood</author>
+                <author role="translatorEng" xml:id="UT22084-039-004-8">Khenpo Kunga Sherab</author>
+                <editor role="projectEditor" xml:id="UT22084-039-004-9">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-039-004-10">Konchog Norbu</editor>
+                <sponsor xml:id="UT22084-039-004-11">Cosmo Namkha Namgyal Sucharitakul with Kuhn Sucharitakul and Pema Choeden Namgyal Abrahams</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.17 <date>2019</date>
+                <edition>v 0.0.20 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-039-004"/>
                 <date/>
             </publicationStmt>
@@ -40,28 +42,78 @@
                     <idno source-id="O1JC114941JC11575" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-15T16:19:27.713Z" user="admin">15/03/2023 16:19:27</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-15T10:59:45.927Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-15T11:00:45.643Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-11-01T13:46:49.527Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2021-11-01T13:46:49.527Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-03T08:51:38.668Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2021-11-03T08:52:14.779Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2021-11-03T08:52:40.445Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2021-11-03T08:52:58.874Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-27T05:54:47.611Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-27T05:55:06.123Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.12" date-time="2022-09-12T08:03:29.365Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.13" date-time="2022-09-12T08:03:48.508Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.14" date-time="2022-10-25T03:58:22.609Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2022-12-16T07:59:22.509Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.15" date-time="2022-12-16T07:59:22.509Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.16" date-time="2022-12-16T08:00:27.695Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.d" date-time="2023-03-15T16:19:23.515Z" user="line-tofte">2.d</note>
-                <note type="updated" update="text-version" value="0.0.17" date-time="2023-03-15T16:19:23.515Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-039-004-12">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2021-04-15T10:59:45.927Z" type="text-version" status="0.0.2" xml:id="UT22084-039-004-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-04-15T11:00:45.643Z" type="text-version" status="0.0.3" xml:id="UT22084-039-004-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-11-01T13:46:49.527Z" type="translation-status" status="2.h" xml:id="UT22084-039-004-15">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-11-01T13:46:49.527Z" type="text-version" status="0.0.4" xml:id="UT22084-039-004-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-11-03T08:51:38.668Z" type="text-version" status="0.0.5" xml:id="UT22084-039-004-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-11-03T08:52:14.779Z" type="text-version" status="0.0.6" xml:id="UT22084-039-004-18">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-11-03T08:52:40.445Z" type="text-version" status="0.0.7" xml:id="UT22084-039-004-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-11-03T08:52:58.874Z" type="text-version" status="0.0.8" xml:id="UT22084-039-004-20">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-27T05:54:47.611Z" type="text-version" status="0.0.10" xml:id="UT22084-039-004-21">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-27T05:55:06.123Z" type="text-version" status="0.0.11" xml:id="UT22084-039-004-22">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-09-12T08:03:29.365Z" type="text-version" status="0.0.12" xml:id="UT22084-039-004-23">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-09-12T08:03:48.508Z" type="text-version" status="0.0.13" xml:id="UT22084-039-004-24">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-10-25T03:58:22.609Z" type="text-version" status="0.0.14" xml:id="UT22084-039-004-25">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T07:59:22.509Z" type="translation-status" status="2.f" xml:id="UT22084-039-004-26">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T07:59:22.509Z" type="text-version" status="0.0.15" xml:id="UT22084-039-004-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T08:00:27.695Z" type="text-version" status="0.0.16" xml:id="UT22084-039-004-28">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-15T16:19:23.515Z" type="translation-status" status="2.d" xml:id="UT22084-039-004-29">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-15T16:19:23.515Z" type="text-version" status="0.0.17" xml:id="UT22084-039-004-30">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-15T16:19:57.913Z" type="text-version" status="0.0.18" xml:id="UT22084-039-004-31">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.19" xml:id="UT22084-039-004-32">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-20T14:36:25.398Z" type="translation-status" status="2.c" xml:id="UT22084-039-004-33">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-20T14:36:25.398Z" type="text-version" status="0.0.20" xml:id="UT22084-039-004-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
