--- a/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
+++ b/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
@@ -41,7 +41,7 @@
                 <sponsor xml:id="UT22084-089-012-4103">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.7 <date>2024</date>
+                <edition>v 1.1.8 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -250,6 +250,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-02-07T18:25:25.807Z" type="text-version" status="1.1.7" xml:id="UT22084-089-012-4166">
                     <desc>Updated bib. entry.</desc>
+                </change>
+                <change who="#konchog" when="2024-02-20T15:49:01.876Z" type="text-version" status="1.1.8" xml:id="UT22084-089-012-4167">
+                    <desc>One fix in the colophon.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -16186,7 +16189,7 @@
                         of “<title xml:lang="en">The Supremely Victorious King of Sūtras, the
                             Sublime Golden Light</title>.”</trailer>
                     <milestone unit="chunk" xml:id="UT22084-089-012-3177"/>
-                    <trailer tid="1933">The Noble Mahāyāna sūtra “<title xml:lang="en">The Supremely
+                    <trailer tid="1933">The noble Mahāyāna sūtra “<title xml:lang="en">The Supremely
                             Victorious King of Sūtras, the Sublime Golden Light</title>” is
                         concluded.</trailer>
                 </div>
