--- a/translations/kangyur/placeholders/066-013_toh255-the_ocean_of_the_dharma.xml
+++ b/translations/kangyur/placeholders/066-013_toh255-the_ocean_of_the_dharma.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-066-013-32">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-066-013"/>
                 <date/>
             </publicationStmt>
@@ -96,6 +96,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T13:47:53.858Z" type="text-version" status="0.0.13" xml:id="UT22084-066-013-35">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-21T14:25:40.764Z" type="translation-status" status="2.c" xml:id="UT22084-066-013-36">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-21T14:25:40.764Z" type="text-version" status="0.0.14" xml:id="UT22084-066-013-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
