--- a/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
+++ b/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
@@ -9,20 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">rgyal mtshan rtse mo'i dpung rgyan gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryadhvajāgrakeyūranāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rgyal mtshan gyi rtse mo'i dpung rgyan ces bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-091-009-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-009-1">Namthar Translation Committee</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-091-009-2">Orgyen Tobgyal Rinpoche</consultant>
                 <consultant role="projectManager" xml:id="UT22084-091-009-3">Gyurme Avertin</consultant>
                 <author role="translatorEng" xml:id="UT22084-091-009-4">Gyurme Avertin</author>
                 <editor role="reviser" xml:id="UT22084-091-009-5">Roberta Pamio</editor>
                 <editor role="reviser" xml:id="UT22084-091-009-6">Ācārya Alexis Prado</editor>
-                <editor role="reviser" xml:id="UT22084-091-009-7">Lama Dzatse Tashi Rinpoche </editor>
+                <editor role="reviser" xml:id="UT22084-091-009-7">Lama Dzatse Tashi Rinpoche</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-009-26">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-091-009"/>
                 <date/>
             </publicationStmt>
@@ -79,6 +80,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-16T16:28:34.108Z" type="text-version" status="0.0.7" xml:id="UT22084-091-009-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T16:32:09.84Z" type="text-version" status="0.0.8" xml:id="UT22084-091-009-27">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-21T14:34:56.068Z" type="translation-status" status="2.f" xml:id="UT22084-091-009-28">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-21T14:34:56.068Z" type="text-version" status="0.0.9" xml:id="UT22084-091-009-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
