--- a/translations/kangyur/translations/066-006_toh248-the_sutra_on_how_to_establish_the_four_features_of_bodhisattvas_individual_liberation.xml
+++ b/translations/kangyur/translations/066-006_toh248-the_sutra_on_how_to_establish_the_four_features_of_bodhisattvas_individual_liberation.xml
@@ -4,20 +4,15 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Accomplishment of the Sets
-                                        of Four Qualities: The Bodhisattvas’ Prātimokṣa</title>
+                <title type="mainTitle" xml:lang="en">The Accomplishment of the Sets of Four Qualities: The Bodhisattvas’ Prātimokṣa</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Bodhisattva­prātimokṣa­catuṣkanirhāra</title>
                 <title type="mainTitle" xml:lang="bo">བྱང་ཆུབ་སེམས་དཔའི་སོ་སོར་ཐར་པ་ཆོས་བཞི་སྒྲུབ་པ།</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">byang chub sems dpa’i so
-                                        sor thar pa chos bzhi sgrub pa</title>
-                <title type="longTitle" xml:lang="en">The Great Vehicle Sūtra “The
-                                        Accomplishment of the Sets of Four Qualities: The
-                                        Bodhisattvas’ Prātimokṣa”</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">byang chub sems dpa’i so sor thar pa chos bzhi sgrub pa</title>
+                <title type="longTitle" xml:lang="en">The Great Vehicle Sūtra “The Accomplishment of the Sets of Four Qualities: The Bodhisattvas’ Prātimokṣa”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Bodhisattva­prātimokṣa­catuṣkanirhāra­nāma­mahāyāna­sūtra</title>
                 <title type="longTitle" xml:lang="bo">བྱང་ཆུབ་སེམས་དཔའི་སོ་སོར་ཐར་པ་ཆོས་བཞི་སྒྲུབ་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">byang chub sems dpa’i so
-                                        sor thar pa chos bzhi sgrub pa zhes bya ba theg pa chen po’i
-                                        mdo</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">byang chub sems dpa’i so sor thar pa chos bzhi sgrub pa zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《圓滿四種品質：菩薩的波羅提木叉（別解脫律儀）》</title>
                 <author role="translatorMain" xml:id="UT22084-066-006-1"><!--Translated
                                         by the Dharmachakra Translation Committee<lb/>under the
                                         patronage and supervision of 84000: Translating the Words of
@@ -33,7 +28,7 @@
                 <editor role="projectEditor" xml:id="UT22084-066-006-281">George FitzHerbert</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -163,6 +158,12 @@
                 </change>
                 <change who="#andre" when="2024-01-23T10:47:35.36Z" type="text-version" status="1.0.2" xml:id="UT22084-066-006-290">
                     <desc>Glossary integration revised</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-01-30T14:10:38.659Z" type="text-version" status="1.0.3" xml:id="UT22084-066-006-291">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-02-21T15:36:50.442Z" type="text-version" status="1.0.4" xml:id="UT22084-066-006-292">
+                    <desc>checked attested sources.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -1659,7 +1660,7 @@
                                         <item>
                         <gloss xml:id="UT22084-066-006-183" type="term" mode="match">
                             <term type="translationMain">tīrthika</term>
-                            <term xml:lang="Sa-Ltn" type="attestedSource" status="verified">tīrthika</term>
+                            <term xml:lang="Sa-Ltn" status="verified">tīrthika</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mu stegs can</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མུ་སྟེགས་ཅན།</term>
                         </gloss>
@@ -1667,7 +1668,7 @@
                                         <item>
                         <gloss xml:id="UT22084-066-006-184" type="term" mode="match">
                             <term type="translationMain">śrāvaka</term>
-                            <term xml:lang="Sa-Ltn" type="attestedSource" status="verified">śrāvaka</term>
+                            <term xml:lang="Sa-Ltn" status="verified">śrāvaka</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">nyan thos</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཉན་ཐོས།</term>
                         </gloss>
@@ -1922,7 +1923,7 @@
                                     <item>
                         <gloss xml:id="UT22084-066-006-284" type="term" mode="match">
                             <term type="translationMain">concentration</term>
-                            <term xml:lang="Sa-Ltn" type="attestedSource">dhyāna</term>
+                            <term xml:lang="Sa-Ltn">dhyāna</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bsam gtan</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བསམ་གཏན།</term>
                         </gloss>
