--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -40,7 +40,7 @@
                 <editor role="projectEditor" xml:id="UT22084-063-001-8135">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.3.4 <date>2024</date>
+                <edition>v 1.3.5 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -300,6 +300,9 @@
                 <change who="#john" when="2024-02-21T21:07:47.07Z" type="text-version" status="1.3.4" xml:id="UT22084-063-001-8205">
                     <desc>Acknowledgments updated.</desc>
                 </change>
+                <change who="#john" when="2024-02-21T21:24:47.013Z" type="text-version" status="1.3.5" xml:id="UT22084-063-001-8206">
+                    <desc>Minor corrections</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -335,11 +338,11 @@
                                         the Dharma. To have understood, realized, and applied them fully is the main
                                         quality by which someone may be considered a member of the Saṅgha
                                         and authorized to teach others and to receive offerings. Those who
-                                        persist in perceiving anything—even elements of the path—as having any kind of true existence 
+                                        persist in perceiving anything—even elements of the path and its results—as having any kind of true existence 
                                         are committing the most serious of all violations of discipline (<foreign xml:lang="Sa-Ltn">śīla</foreign>),
                                         and since they fail to follow the Buddha’s core teaching in this way 
-                                        should not even be considered his followers.
-                                        His dialog with Śāriputra continues on the consequences of monks’ violating their discipline
+                                        they should not even be considered his followers.
+                                        The Buddha’s dialog with Śāriputra continues on the consequences of monks’ violating their discipline
                                         more broadly, and he gives several prophecies about the future decline of the
                                         Dharma that will be caused by the misbehavior of such monks.</p>
                         </div>
