--- a/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
@@ -11,15 +11,15 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa drug gzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phar phyin drug gzung ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-090-024-1">84000 Associate Translators</author>
-                <author role="translatorEng" xml:id="UT22084-090-024-2">Paul Hackett</author>
+                <author role="translatorEng" xml:id="UT22084-090-024-2">Paul G. Hackett</author>
                 <editor role="projectEditor" xml:id="UT22084-090-024-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-090-024"/>
                 <date/>
             </publicationStmt>
@@ -76,6 +76,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T16:04:56.017Z" type="text-version" status="0.0.7" xml:id="UT22084-090-024-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:05:24.451Z" type="text-version" status="0.0.8" xml:id="UT22084-090-024-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T11:19:58.694Z" type="translation-status" status="2.e" xml:id="UT22084-090-024-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T11:19:58.694Z" type="text-version" status="0.0.9" xml:id="UT22084-090-024-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
