--- a/translations/kangyur/placeholders/090-025_toh581,937-the_incantation_that_gains_the_ten_perfections.xml
+++ b/translations/kangyur/placeholders/090-025_toh581,937-the_incantation_that_gains_the_ten_perfections.xml
@@ -10,15 +10,15 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa bcu thob par 'gyur pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pha rol tu phyin pa bcu thob par 'gyur ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-090-025-1">84000 Associate Translators</author>
-                <author role="translatorEng" xml:id="UT22084-090-025-2">Paul Hackett</author>
+                <author role="translatorEng" xml:id="UT22084-090-025-2">Paul G. Hackett</author>
                 <editor role="projectEditor" xml:id="UT22084-090-025-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-090-025"/>
                 <date/>
             </publicationStmt>
@@ -75,6 +75,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T16:06:15.321Z" type="text-version" status="0.0.7" xml:id="UT22084-090-025-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:06:43Z" type="text-version" status="0.0.8" xml:id="UT22084-090-025-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T11:21:02.517Z" type="translation-status" status="2.e" xml:id="UT22084-090-025-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T11:21:02.517Z" type="text-version" status="0.0.9" xml:id="UT22084-090-025-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
