--- a/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -12,15 +12,15 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa gzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa bzung bar 'gyur ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-090-027-1">84000 Associate Translators</author>
-                <author role="translatorEng" xml:id="UT22084-090-027-2">Paul Hackett</author>
+                <author role="translatorEng" xml:id="UT22084-090-027-2">Paul G. Hackett</author>
                 <editor role="projectEditor" xml:id="UT22084-090-027-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-090-027"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +77,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T16:07:30.467Z" type="text-version" status="0.0.7" xml:id="UT22084-090-027-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:07:57.241Z" type="text-version" status="0.0.8" xml:id="UT22084-090-027-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T11:22:05.461Z" type="translation-status" status="2.e" xml:id="UT22084-090-027-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T11:22:05.461Z" type="text-version" status="0.0.9" xml:id="UT22084-090-027-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
