--- a/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
+++ b/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
@@ -11,15 +11,15 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phal po che gzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phal po che gzung ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-090-028-1">84000 Associate Translators</author>
-                <author role="translatorEng" xml:id="UT22084-090-028-2">Paul Hackett</author>
+                <author role="translatorEng" xml:id="UT22084-090-028-2">Paul G. Hackett</author>
                 <editor role="projectEditor" xml:id="UT22084-090-028-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-090-028"/>
                 <date/>
             </publicationStmt>
@@ -76,6 +76,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T16:08:40.469Z" type="text-version" status="0.0.7" xml:id="UT22084-090-028-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-07T16:09:06.899Z" type="text-version" status="0.0.8" xml:id="UT22084-090-028-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T11:23:04.741Z" type="translation-status" status="2.e" xml:id="UT22084-090-028-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T11:23:04.741Z" type="text-version" status="0.0.9" xml:id="UT22084-090-028-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
