--- a/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
+++ b/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
@@ -18,12 +18,12 @@
                 <editor role="copyEditor" xml:id="UT22084-071-002-31">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-071-002"/>
                 <date/>
             </publicationStmt>
@@ -86,6 +86,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-02T09:10:54.645Z" type="text-version" status="0.0.10" xml:id="UT22084-071-002-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T14:57:57.392Z" type="translation-status" status="2.b" xml:id="UT22084-071-002-35">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T14:57:57.392Z" type="text-version" status="0.0.11" xml:id="UT22084-071-002-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
