--- a/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
+++ b/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
@@ -16,14 +16,15 @@
                 <editor role="projectEditor" xml:id="UT22084-071-002-5">Nathaniel Rich</editor>
                 <editor role="projectEditor" xml:id="UT22084-071-002-21">John Canti</editor>
                 <editor role="copyEditor" xml:id="UT22084-071-002-31">Dawn Collins</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-071-002-44">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-071-002"/>
                 <date/>
             </publicationStmt>
@@ -92,6 +93,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-22T14:57:57.392Z" type="text-version" status="0.0.11" xml:id="UT22084-071-002-36">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T14:58:43.718Z" type="text-version" status="0.0.12" xml:id="UT22084-071-002-45">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T15:03:07.718Z" type="translation-status" status="2.a" xml:id="UT22084-071-002-46">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-22T15:03:07.718Z" type="text-version" status="0.0.13" xml:id="UT22084-071-002-47">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
